; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_mx3fb.c_sdc_fb_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_mx3fb.c_sdc_fb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mx3fb_info = type { %struct.mx3fb_data* }
%struct.mx3fb_data = type { i32 }

@SDC_COM_CONF = common dso_local global i32 0, align 4
@SDC_COM_BG_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mx3fb_info*)* @sdc_fb_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdc_fb_init(%struct.mx3fb_info* %0) #0 {
  %2 = alloca %struct.mx3fb_info*, align 8
  %3 = alloca %struct.mx3fb_data*, align 8
  %4 = alloca i32, align 4
  store %struct.mx3fb_info* %0, %struct.mx3fb_info** %2, align 8
  %5 = load %struct.mx3fb_info*, %struct.mx3fb_info** %2, align 8
  %6 = getelementptr inbounds %struct.mx3fb_info, %struct.mx3fb_info* %5, i32 0, i32 0
  %7 = load %struct.mx3fb_data*, %struct.mx3fb_data** %6, align 8
  store %struct.mx3fb_data* %7, %struct.mx3fb_data** %3, align 8
  %8 = load %struct.mx3fb_data*, %struct.mx3fb_data** %3, align 8
  %9 = load i32, i32* @SDC_COM_CONF, align 4
  %10 = call i32 @mx3fb_read_reg(%struct.mx3fb_data* %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load %struct.mx3fb_data*, %struct.mx3fb_data** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @SDC_COM_BG_EN, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @SDC_COM_CONF, align 4
  %16 = call i32 @mx3fb_write_reg(%struct.mx3fb_data* %11, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @mx3fb_read_reg(%struct.mx3fb_data*, i32) #1

declare dso_local i32 @mx3fb_write_reg(%struct.mx3fb_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
